--- a/article.html
+++ b/article.html
@@ -20,7 +20,7 @@
                         <li><a href="collection.html">Collection</a></li>
                         <li><a href="article.html">Article</a></li>
                         <li><a href="ranking.html">Ranking</a></li>
-                        <li><a href="#">Minting</a></li>
+                        <li><a href="minting.html">Minting</a></li>
                         <li><a href="#">Help</a></li>
                     </ul>
                 </div>
@@ -107,7 +107,7 @@
         <div class="article-container flex">
             <div class="article-box">
                 <a href="#">
-                    <img src="image/article/1.png">
+                    <img src="image/article/5.png">
                 </a>
                 <div class="article-text">
                     <h1 class="section-title">Nakamigos</h1>
@@ -117,7 +117,7 @@
             </div>
             <div class="article-box">
                 <a href="#">
-                    <img src="image/article/2.png">
+                    <img src="image/article/6.png">
                 </a>
                 <div class="article-text">
                     <h1 class="section-title">BEANZ Official</h1>
@@ -127,7 +127,7 @@
             </div>
             <div class="article-box">
                 <a href="#">
-                    <img src="image/article/3.png">
+                    <img src="image/article/7.png">
                 </a>
                 <div class="article-text">
                     <h1 class="section-title">Bored Ape Yacht Club</h1>
@@ -137,7 +137,7 @@
             </div>
             <div class="article-box">
                 <a href="#">
-                    <img src="image/article/4.png">
+                    <img src="image/article/8.png">
                 </a>
                 <div class="article-text">
                     <h1 class="section-title">Private Jet Pyjama Party</h1>
@@ -161,7 +161,7 @@
         <div class="article-container flex">
             <div class="article-box">
                 <a href="#">
-                    <img src="image/article/1.png">
+                    <img src="image/article/9.png">
                 </a>
                 <div class="article-text">
                     <h1 class="section-title">Nakamigos</h1>
@@ -171,7 +171,7 @@
             </div>
             <div class="article-box">
                 <a href="#">
-                    <img src="image/article/2.png">
+                    <img src="image/article/10.png">
                 </a>
                 <div class="article-text">
                     <h1 class="section-title">BEANZ Official</h1>
@@ -181,7 +181,7 @@
             </div>
             <div class="article-box">
                 <a href="#">
-                    <img src="image/article/3.png">
+                    <img src="image/article/11.png">
                 </a>
                 <div class="article-text">
                     <h1 class="section-title">Bored Ape Yacht Club</h1>
@@ -191,7 +191,7 @@
             </div>
             <div class="article-box">
                 <a href="#">
-                    <img src="image/article/4.png">
+                    <img src="image/article/12.png">
                 </a>
                 <div class="article-text">
                     <h1 class="section-title">Private Jet Pyjama Party</h1>
