--- a/minting.html
+++ b/minting.html
@@ -20,7 +20,7 @@
                         <li><a href="collection.html">Collection</a></li>
                         <li><a href="article.html">Article</a></li>
                         <li><a href="ranking.html">Ranking</a></li>
-                        <li><a href="#">Minting</a></li>
+                        <li><a href="minting.html">Minting</a></li>
                         <li><a href="#">Help</a></li>
                     </ul>
                 </div>
@@ -45,16 +45,319 @@
             </div>
         </div>
     </header>
+
     <section class="minting">
         <div class="minting-container grid-width">
             <div class="minting-left">
                 <img src="image/mitingMain.svg">
             </div>
             <div class="minting-right">
+                <div class="minting-main">
+                    <div class="collection-name flex">
+                        <div class="macintosh-collection flex">
+                            <p>Macintosh Collection</p>
+                            <img src="image/blueCheck-21x21.svg">
+                        </div>
+                        <div class="share-icon">
+                            <img src="image/share-icon-2-21x21.svg">
+                            <img src="image/share-icon-21x21.svg">
+                        </div>
+                    </div>
+                    <div class="nft-name">
+                        <h3>Energy ipad</h3>
+                        <p>#325</p>
+                    </div>
+                    <p id="owner-name">Owner by JeukJeon</p>
+                    <div class="minting-nft-price">
+                        <h1>74.83 ETH</h1>
+                        <p>$148,776.25</p>
+                    </div>
+                    <div class="mintingBtn flex">
+                        <button class="minting-button minting-blueBtn">Add to Cart</button>
+                        <button class="minting-button minting-whiteBtn">Make offer</button>
+                    </div>
+                </div>
+                <div class="nft-detail">
+                    <ul class="list-box">
+                        <li>
+                          <input type="checkbox" name="ddd" id="listFirst">
+                          <label class="main" for="listFirst">
+                            <div class="categori-title">
+                                <p>Description</p>
+                                <img src="image/toggle-icon-16x16.svg">
+                            </div>
+                          </label>
+                          <div class="sub">
+                            <ul>
+                              <li class="flex">
+                                <p id="nft-detail-text" style="padding-left: 10px">By <span>JeukJeon</span><br>
+                                    이 펑크는 랩드 펑크 계약을 사용하여 포장되었으며, 다음에서 액세스할 수 있습니다.<br>
+                                    https://wrappedpunks.com</p>
+                            </li>
+                            </ul>
+                          </div>
+                        </li>
+                        <li>
+                            <input type="checkbox" name="ddd" id="listSecond">
+                            <label class="main" for="listSecond">
+                              <div class="categori-title">
+                                  <p>Detail</p>
+                                  <img src="image/toggle-icon-16x16.svg">
+                              </div>
+                            </label>
+                            <div class="sub">
+                              <ul>
+                                <li class="flex sub-flex">
+                                  <p class="sub-detail">Contract Address</p>
+                                  <p class="sub-detail-text">0xed5a...c544</p>
+                                </li>
+                                <li class="flex sub-flex">
+                                    <p class="sub-detail">Token ID</p>
+                                    <p class="sub-detail-text">3810</p>
+                                </li>
+                                <li class="flex sub-flex">
+                                    <p class="sub-detail">Token Standard</p>
+                                    <p class="sub-detail-text">ERC-721</p>
+                                </li>
+                                <li class="flex sub-flex">
+                                    <p class="sub-detail">Chain</p>
+                                    <p class="sub-detail-text">Ethereum</p>
+                                </li>
+                                <li class="flex sub-flex">
+                                    <p class="sub-detail">Last Updated</p>
+                                    <p class="sub-detail-text">2 months ago</p>
+                                </li>
+                                <li class="flex sub-flex">
+                                    <p class="sub-detail">Creator Earnings</p>
+                                    <p class="sub-detail-text">5%</p>
+                                </li>
+                              </ul>
+                            </div>
+                        </li>
+                        <li>
+                            <input type="checkbox" name="ddd" id="listThird">
+                            <label class="main" for="listThird">
+                              <div class="categori-title">
+                                  <p>About Macintosh</p>
+                                  <img src="image/toggle-icon-16x16.svg">
+                              </div>
+                            </label>
+                            <div class="sub">
+                              <ul>
+                                <li class="flex sub-flex">
+                                    <p id="nft-detail-text" style="padding-left: 10px">Take the red bean to join the garden. View the collection at azuki.com/gallery.<br><br>
 
+                                    Azuki starts with a collection of 10,000 avatars that give you membership access to The Garden: a corner of the internet where artists, builders, and web3 enthusiasts meet to create a decentralized future. Azuki holders receive access to exclusive drops, experiences, and more. Visit azuki.com for more details.<br><br>
+                                    
+                                    We rise together. We build together. We grow together.<br><br>
+                                    
+                                    Category PFP</p>
+                                </li>
+                              </ul>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </section>
+
+    <section class="morefrom">
+        <div class="morefrom-container grid-width">
+            <h1 class="section-title morefrom-title">More from @JeukJeon</h1>
+            <div class="nft-line flex">
+                <div class="nft-box">
+                    <a href="#">
+                        <div style="width: 291px; height: 291px; overflow: hidden;">
+                            <img src="image/collection-photo/1.png"">
+                        </div>
+                    </a>
+                    <div class="eth-box">
+                        <p>0.023</p>
+                        <img src="image/ETH-icon-20x20.svg" alt="">
+                    </div>
+                    <div class="collection-nft-profile">
+                        <div class="nft-price-main">
+                            <h1>Energy ipad</h1>
+                            <p>#321</p>
+                        </div>
+                        <div class="nft-price-sub">
+                            <p>Last sale :  0.0002 ETH</p>
+                        </div>
+                    </div>
+                    <button class="nft-button">Add to cart</button>
+                </div>
+                <div class="nft-box">
+                    <a href="#">
+                        <div style="width: 291px; height: 291px; overflow: hidden;">
+                            <img src="image/collection-photo/2.png"">
+                        </div>
+                    </a>
+                    <div class="eth-box">
+                        <p>0.023</p>
+                        <img src="image/ETH-icon-20x20.svg" alt="">
+                    </div>
+                    <div class="collection-nft-profile">
+                        <div class="nft-price-main">
+                            <h1>Energy ipad</h1>
+                            <p>#321</p>
+                        </div>
+                        <div class="nft-price-sub">
+                            <p>Last sale :  0.0002 ETH</p>
+                        </div>
+                    </div>
+                    <button class="nft-button">Add to cart</button>
+                </div>
+                <div class="nft-box">
+                    <a href="#">
+                        <div style="width: 291px; height: 291px; overflow: hidden;">
+                            <img src="image/collection-photo/3.png"">
+                        </div>
+                    </a>
+                    <div class="eth-box">
+                        <p>0.023</p>
+                        <img src="image/ETH-icon-20x20.svg" alt="">
+                    </div>
+                    <div class="collection-nft-profile">
+                        <div class="nft-price-main">
+                            <h1>Energy ipad</h1>
+                            <p>#321</p>
+                        </div>
+                        <div class="nft-price-sub">
+                            <p>Last sale :  0.0002 ETH</p>
+                        </div>
+                    </div>
+                    <button class="nft-button">Add to cart</button>
+                </div>
+                <div class="nft-box">
+                    <a href="#">
+                        <div style="width: 291px; height: 291px; overflow: hidden;">
+                            <img src="image/collection-photo/4.png"">
+                        </div>
+                    </a>
+                    <div class="eth-box">
+                        <p>0.023</p>
+                        <img src="image/ETH-icon-20x20.svg" alt="">
+                    </div>
+                    <div class="collection-nft-profile">
+                        <div class="nft-price-main">
+                            <h1>Energy ipad</h1>
+                            <p>#321</p>
+                        </div>
+                        <div class="nft-price-sub">
+                            <p>Last sale :  0.0002 ETH</p>
+                        </div>
+                    </div>
+                    <button class="nft-button">Add to cart</button>
+                </div>
+                <div class="nft-box">
+                    <a href="#">
+                        <div style="width: 291px; height: 291px; overflow: hidden;">
+                            <img src="image/collection-photo/5.png"">
+                        </div>
+                    </a>
+                    <div class="eth-box">
+                        <p>0.023</p>
+                        <img src="image/ETH-icon-20x20.svg" alt="">
+                    </div>
+                    <div class="collection-nft-profile">
+                        <div class="nft-price-main">
+                            <h1>Energy ipad</h1>
+                            <p>#321</p>
+                        </div>
+                        <div class="nft-price-sub">
+                            <p>Last sale :  0.0002 ETH</p>
+                        </div>
+                    </div>
+                    <button class="nft-button">Add to cart</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="ranking grid-width" style="margin-top: 150px">
+        <div class="view-more-flex">
+            <h1 class="section-title">Top NFT this Week</h1>
+            <a class="view-more" href="#">VIEW MORE</a>
+        </div>
+        <div class="wrapper">
+            <table>
+                <thead>
+                    <tr>
+                        <th></th>
+                        <th>Collection</th>
+                        <th>Volume</th>
+                        <th>Change</th>
+                        <th>Floor Price</th>
+                        <th>Sales</th>
+                        <th>Unique Owneres</th>
+                        <th>Items Listed</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody class="cursor">
+                    <tr >
+                        <td class="rank">1</td>
+                        <td class="collection">
+                            <img class="nft-profile" src="image/profile/9.avif"><span style="margin-left: 20px;">Macintosh Collection</span>
+                        </td>
+                        <td class="volume">0.242 ETH</td>
+                        <td class="change change-red">+8%</td>
+                        <td class="floor-price">0.05 ETH</td>
+                        <td class="sales">0.05 ETH</td>
+                        <td class="unique-owneres">56%<br><span style="font-size: 14px; font-weight: bold; color: #909090;">2,706 owners</span></td>
+                        <td class="items-listed">4%<br><span style="font-size: 14px; font-weight: bold; color: #909090;">213 of 4,797</span></td>
+                        <td class="bookmark"><img src="image/star-21x21.svg" style="margin-right: 10px;"></td>
+                    </tr>
+                    <tr>
+                        <td class="rank">2</td>
+                        <td class="collection"><img class="nft-profile" src="image/profile/4.avif" style="width: 64px;"><span style="margin-left: 20px;">Bored Ape Yacht Club</span></td>
+                        <td class="volume">55 ETH</td>
+                        <td class="change">-</td>
+                        <td class="floor-price">53.99 ETH</td>
+                        <td class="sales">10</td>
+                        <td class="unique-owneres">58%<br><span style="font-size: 14px; font-weight: bold; color: #909090;">11,232 owners</span></td>
+                        <td class="items-listed">3%<br><span style="font-size: 14px; font-weight: bold; color: #909090;">264 of 9,998</span></td>
+                        <td class="bookmark"><img src="image/star-21x21.svg" style="margin-right: 10px;"></td>
+                    </tr>
+                    <tr>
+                        <td class="rank">3</td>
+                        <td class="collection"><img class="nft-profile" src="image/profile/6.avif" style="width: 64px;"><span style="margin-left: 20px;">Wrapped Cryptopunks</span></td>
+                        <td class="volume">53 ETH</td>
+                        <td class="change">-</td>
+                        <td class="floor-price">74.83 ETH</td>
+                        <td class="sales">1</td>
+                        <td class="unique-owneres">17%<br><span style="font-size: 14px; font-weight: bold; color: #909090;">136 owners</span></td>
+                        <td class="items-listed">0.13%<br><span style="font-size: 14px; font-weight: bold; color: #909090;">1 of 783</span></td>
+                        <td class="bookmark"><img src="image/star-21x21.svg" style="margin-right: 10px;"></td>
+                    </tr>
+                    <tr>
+                        <td class="rank">4</td>
+                        <td class="collection"><img class="nft-profile" src="image/profile/7.avif" style="width: 64px;"><span style="margin-left: 20px;">Milady Maker</span></td>
+                        <td class="volume">12.3 ETH</td>
+                        <td class="change change-blue">-16%</td>
+                        <td class="floor-price">1.78 ETH</td>
+                        <td class="sales">7</td>
+                        <td class="unique-owneres">33%<br><span style="font-size: 14px; font-weight: bold; color: #909090;">3,281 owners</span></td>
+                        <td class="items-listed">3%<br><span style="font-size: 14px; font-weight: bold; color: #909090;">306 of 9,824</span></td>
+                        <td class="bookmark"><img src="image/star-21x21.svg" style="margin-right: 10px;"></td>
+                    </tr>
+                    <tr>
+                        <td class="rank">5</td>
+                        <td class="collection"><img class="nft-profile" src="image/profile/8.avif" style="width: 64px;"><span style="margin-left: 20px;">Outlaws</span></td>
+                        <td class="volume">11.1 ETH</td>
+                        <td class="change change-red">+78%</td>
+                        <td class="floor-price">0.11 ETH</td>
+                        <td class="sales">89</td>
+                        <td class="unique-owneres">31%<br><span style="font-size: 14px; font-weight: bold; color: #909090;">3,062 owners</span></td>
+                        <td class="items-listed">10%<br><span style="font-size: 14px; font-weight: bold; color: #909090;">1,038 of 10,001</span></td>
+                        <td class="bookmark"><img src="image/star-21x21.svg" style="margin-right: 10px;"></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </section>
+
     <footer>
         <div class="footer-container grid-width">
             <div class="footer-menu">
