--- a/ranking.html
+++ b/ranking.html
@@ -20,7 +20,7 @@
                         <li><a href="collection.html">Collection</a></li>
                         <li><a href="article.html">Article</a></li>
                         <li><a href="ranking.html">Ranking</a></li>
-                        <li><a href="#">Minting</a></li>
+                        <li><a href="minting.html">Minting</a></li>
                         <li><a href="#">Help</a></li>
                     </ul>
                 </div>
